--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
     "printWidth": 100,
     "trailingComma": "es5",
     "tabWidth": 4,
-    "semi": false,
+    "semi": true,
     "singleQuote": true
   }
